--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,42 +3,25 @@ name: Github Actions
 on:
   push:
     branches:
-      - '**'
-    tags:
-      - '**'
+      - "main"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          images: jwpark/node
-          tag-semver: |
-            {{version}}
-            {{major}}.{{minor}}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
         name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/ubuntu-ssh:latest
  
