--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,17 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ vars.DOCKERHUB_USERNAME }}/ubuntu-ssh
+          tags: |
+            type=schedule,pattern={{date 'YYYYMMDD-hhmmss' tz='Asia/Seoul'}}
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
