--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/ubuntu-ssh:latest
- 
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
