--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,13 @@ jobs:
           images: |
             jwpark/ubuntu-ssh
           tags: |
-            type=schedule,pattern={{date 'YYYYMMDD-hhmmss' tz='Asia/Seoul'}}
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha    
 
       - name: Build and push
         uses: docker/build-push-action@v6
