--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,10 +25,7 @@ jobs:
           images: |
             jwpark/ubuntu-ssh
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=sha
 
       - name: Build and push
         uses: docker/build-push-action@v6
